--- a/index.html
+++ b/index.html
@@ -13,14 +13,21 @@
     <title>마켓 홈 - 네이버 OGQ마켓</title>
   </head>
   <body>
+
+    <!-- header start  -->
     <header class="header">
+
       <div class="header__inner">
+
+        <!-- header__logo -->
         <div class="header__logo">
           <h1 class="logo-wrap">
             <a href="#" class="logo-naver__link">naver</a>
             <a href="#" class="logo-ogq__link">오지큐 마켓</a>
           </h1>
         </div>
+
+        <!-- header__menu -->
         <nav class="header__menu">
           <ul class="tab">
             <li class="tab__item"><a href="#">스토리</a></li>
@@ -29,6 +36,8 @@
             <li class="tab__item"><a href="#">이벤트</a></li>
           </ul>
         </nav>
+
+        <!-- header__account -->
         <div class="header__account">
           <div class="header__account__inner">
             <div class="link-creator">
@@ -41,6 +50,8 @@
             </div>
           </div>
         </div>
+
+        <!-- header__search -->
         <div class="header__search">
           <form class="search-form" action="">
             <div class="search-form__content">
@@ -54,6 +65,8 @@
             </div>
           </form>
         </div>
+
+        <!-- header__responsive mobile menu -->
         <div class="header__responsive">
           <h2 class="title">마켓</h2>
           <div class="btn-home"><a href="#">홈으로 가기</a></div>
@@ -63,6 +76,8 @@
           </div>
         </div>
       </div>
+
+      <!-- header__sub-menu -->
       <nav class="header__sub-menu">
         <ul class="tab">
           <li class="tab__item tab__item--focused"><a href="#">마켓홈</a></li>
@@ -72,27 +87,36 @@
           <li class="tab__item"><a href="#">컬러링시트</a></li>
         </ul>
       </nav>
-    </header>
 
+    </header>
+    <!-- header end -->
+
+    <!-- main start -->
     <main class="content-container">
+
       <div class="content-container__inner">
+
+        <!-- featured-artworks start -->
         <div class="featured-box featured-box-1 featured-artworks">
+
+          <!-- featured-artworks header -->
           <div class="featured-box__header">
             <h2 class="featured-box__title">스티커</h2>
             <a class="featured-box__btn-more" href="#">더보기</a>
           </div>
+
+          <!-- featured-artworks contents -->
           <div class="card-wrap-1">
+
+            <!-- card -->
             <div class="card">
               <div class="card__inner">
                 <div class="card__thumb">
                   <a class="card__link padding" href="#">
                     <div class="card__link__inner">
-                      <img
-                        class="card__thumb-img"
-                        src="https://storep-phinf.pstatic.net/ogq-59811d7efbda2/stk/cj9fbrgv.png?type=f480_480"
-                        alt="사막여우와 왕자의 할로윈 파티"
-                      /></div
-                  ></a>
+                      <img class="card__thumb-img" src="https://storep-phinf.pstatic.net/ogq-59811d7efbda2/stk/cj9fbrgv.png?type=f480_480" alt="사막여우와 왕자의 할로윈 파티" />
+                    </div>
+                  </a>
                   <div class="card__btn-wrap">
                     <button class="card__btn-scrap">찜하기</button>
                   </div>
@@ -102,28 +126,24 @@
                     <a href="#">사막여우와 왕자의 할로윈 파티</a>
                   </h3>
                   <div class="card__author-wrap">
-                    <a href="#"
-                      ><span class="card__author-thumb"
-                        ><img
-                          src="https://storep-phinf.pstatic.net/ogq-577b08b6b6de9/stk/x1u9xo0z.png?type=f480_480"
-                          alt="에레" /></span
-                      ><span class="card__author-name">에레</span></a
-                    >
+                    <a href="#">
+                      <span class="card__author-thumb"><img src="https://storep-phinf.pstatic.net/ogq-577b08b6b6de9/stk/x1u9xo0z.png?type=f480_480" alt="에레" /></span>
+                      <span class="card__author-name">에레</span>
+                    </a>
                   </div>
                 </div>
               </div>
             </div>
+
+            <!-- card -->
             <div class="card">
               <div class="card__inner">
                 <div class="card__thumb">
                   <a class="card__link padding" href="#">
                     <div class="card__link__inner">
-                      <img
-                        class="card__thumb-img"
-                        src="https://storep-phinf.pstatic.net/ogq-577b08b6b6de9/stk/x1u9xo0z.png?type=f480_480"
-                        alt="해피 할로윈!"
-                      /></div
-                  ></a>
+                      <img class="card__thumb-img" src="https://storep-phinf.pstatic.net/ogq-577b08b6b6de9/stk/x1u9xo0z.png?type=f480_480" alt="해피 할로윈!"/>
+                    </div>
+                  </a>
                   <div class="card__btn-wrap">
                     <button class="card__btn-scrap">찜하기</button>
                   </div>
@@ -131,28 +151,24 @@
                 <div class="card__info">
                   <h3 class="card__title"><a href="#">해피 할로윈!</a></h3>
                   <div class="card__author-wrap">
-                    <a href="#"
-                      ><span class="card__author-thumb"
-                        ><img
-                          src="https://s3-ap-northeast-2.amazonaws.com/prod-seoul-market/PROFILE_IMG/055fffb3/57dc73bfff550/OGQ_명양_2018-12-24_f120_120.png"
-                          alt="명양" /></span
-                      ><span class="card__author-name">명양</span></a
-                    >
+                    <a href="#">
+                      <span class="card__author-thumb"><img src="https://s3-ap-northeast-2.amazonaws.com/prod-seoul-market/PROFILE_IMG/055fffb3/57dc73bfff550/OGQ_명양_2018-12-24_f120_120.png"alt="명양" /></span>
+                      <span class="card__author-name">명양</span>
+                    </a>
                   </div>
                 </div>
               </div>
             </div>
+
+            <!-- card -->
             <div class="card">
               <div class="card__inner">
                 <div class="card__thumb">
                   <a class="card__link padding" href="#">
                     <div class="card__link__inner">
-                      <img
-                        class="card__thumb-img"
-                        src="https://storep-phinf.pstatic.net/ogq-578165f072fa0/stk/nqw71lsd.png?type=f480_480"
-                        alt="해피 할로윈 친구들"
-                      /></div
-                  ></a>
+                      <img class="card__thumb-img" src="https://storep-phinf.pstatic.net/ogq-578165f072fa0/stk/nqw71lsd.png?type=f480_480" alt="해피 할로윈 친구들"/>
+                    </div>
+                  </a>
                   <div class="card__btn-wrap">
                     <button class="card__btn-scrap">찜하기</button>
                   </div>
@@ -162,17 +178,16 @@
                     <a href="#">해피 할로윈 친구들</a>
                   </h3>
                   <div class="card__author-wrap">
-                    <a href="#"
-                      ><span class="card__author-thumb"
-                        ><img
-                          src="https://s3-ap-northeast-2.amazonaws.com/prod-seoul-market/PROFILE_IMG/055fffb3/57dc73bfff550/OGQ_명양_2018-12-24_f120_120.png"
-                          alt="땅콩C" /></span
-                      ><span class="card__author-name">땅콩C</span></a
-                    >
+                    <a href="#">
+                      <span class="card__author-thumb"><img src="https://s3-ap-northeast-2.amazonaws.com/prod-seoul-market/PROFILE_IMG/055fffb3/57dc73bfff550/OGQ_명양_2018-12-24_f120_120.png" alt="땅콩C" /></span>
+                      <span class="card__author-name">땅콩C</span>
+                    </a>
                   </div>
                 </div>
               </div>
             </div>
+
+            <!-- card -->
             <div class="card">
               <div class="card__inner">
                 <div class="card__thumb">
@@ -202,6 +217,8 @@
                 </div>
               </div>
             </div>
+
+            <!-- card -->
             <div class="card">
               <div class="card__inner">
                 <div class="card__thumb">
@@ -231,6 +248,8 @@
                 </div>
               </div>
             </div>
+
+            <!-- card -->
             <div class="card">
               <div class="card__inner">
                 <div class="card__thumb">
@@ -262,15 +281,25 @@
                 </div>
               </div>
             </div>
+
           </div>
           <a class="featured-box__btn-more-m" href="#">더보기</a>
         </div>
+        <!-- featured-artworks end -->
+
+        <!-- featured-images start -->
         <div class="featured-box featured-box-1 featured-images">
+
+          <!-- featured-images header -->
           <div class="featured-box__header">
             <h2 class="featured-box__title">이미지</h2>
             <a class="featured-box__btn-more" href="#">더보기</a>
           </div>
+
+          <!-- featured-images contents -->
           <div class="card-wrap-1">
+
+            <!-- card -->
             <div class="card">
               <div class="card__inner">
                 <div class="card__thumb">
@@ -300,6 +329,8 @@
                 </div>
               </div>
             </div>
+
+            <!-- card -->
             <div class="card">
               <div class="card__inner">
                 <div class="card__thumb">
@@ -331,6 +362,8 @@
                 </div>
               </div>
             </div>
+
+            <!-- card -->
             <div class="card">
               <div class="card__inner">
                 <div class="card__thumb">
@@ -360,6 +393,8 @@
                 </div>
               </div>
             </div>
+
+            <!-- card -->
             <div class="card">
               <div class="card__inner">
                 <div class="card__thumb">
@@ -389,6 +424,8 @@
                 </div>
               </div>
             </div>
+
+            <!-- card -->
             <div class="card">
               <div class="card__inner">
                 <div class="card__thumb">
@@ -418,6 +455,8 @@
                 </div>
               </div>
             </div>
+
+            <!-- card -->
             <div class="card">
               <div class="card__inner">
                 <div class="card__thumb">
@@ -449,15 +488,25 @@
                 </div>
               </div>
             </div>
+
           </div>
           <a class="featured-box__btn-more-m" href="#">더보기</a>
         </div>
+        <!-- featured-images end -->
+
+        <!-- featured-audio start -->
         <div class="featured-box featured-box-2 featured-audio">
+
+          <!-- featured-audio header -->
           <div class="featured-box__header">
             <h2 class="featured-box__title">음원</h2>
             <a class="featured-box__btn-more" href="#">더보기</a>
           </div>
+
+          <!-- featured-audio content -->
           <div class="card-wrap-2">
+
+            <!-- card -->
             <div class="card">
               <div class="card__inner">
                 <div class="card__thumb">
@@ -488,6 +537,8 @@
                 </div>
               </div>
             </div>
+
+            <!-- card -->
             <div class="card">
               <div class="card__inner">
                 <div class="card__thumb">
@@ -518,6 +569,8 @@
                 </div>
               </div>
             </div>
+
+            <!-- card -->
             <div class="card">
               <div class="card__inner">
                 <div class="card__thumb">
@@ -550,6 +603,8 @@
                 </div>
               </div>
             </div>
+
+            <!-- card -->
             <div class="card">
               <div class="card__inner">
                 <div class="card__thumb">
@@ -612,6 +667,8 @@
                 </div>
               </div>
             </div>
+
+            <!-- card -->
             <div class="card">
               <div class="card__inner">
                 <div class="card__thumb">
@@ -645,12 +702,21 @@
           </div>
           <a class="featured-box__btn-more-m" href="#">더보기</a>
         </div>
+        <!-- featured-audio end -->
+
+        <!-- featured-coloring start -->
         <div class="featured-box featured-box-1 featured-coloring">
+
+          <!-- featured-coloring header -->
           <div class="featured-box__header">
             <h2 class="featured-box__title">컬러링시트</h2>
             <a class="featured-box__btn-more" href="#">더보기</a>
           </div>
+
+          <!-- featured-coloring contents -->
           <div class="card-wrap-1">
+
+            <!-- card -->
             <div class="card">
               <div class="card__inner">
                 <div class="card__thumb">
@@ -682,6 +748,8 @@
                 </div>
               </div>
             </div>
+
+            <!-- card -->
             <div class="card">
               <div class="card__inner">
                 <div class="card__thumb">
@@ -711,6 +779,8 @@
                 </div>
               </div>
             </div>
+
+            <!-- card -->
             <div class="card">
               <div class="card__inner">
                 <div class="card__thumb">
@@ -742,6 +812,8 @@
                 </div>
               </div>
             </div>
+
+            <!-- card -->
             <div class="card">
               <div class="card__inner">
                 <div class="card__thumb">
@@ -773,6 +845,8 @@
                 </div>
               </div>
             </div>
+
+            <!-- card -->
             <div class="card">
               <div class="card__inner">
                 <div class="card__thumb">
@@ -802,6 +876,8 @@
                 </div>
               </div>
             </div>
+
+            <!-- card -->
             <div class="card">
               <div class="card__inner">
                 <div class="card__thumb">
@@ -836,11 +912,19 @@
           </div>
           <a class="featured-box__btn-more-m" href="#">더보기</a>
         </div>
-      </div>
-    </main>
+        <!-- featured-coloring end -->
 
+      </div>
+
+    </main>
+    <!-- main end -->
+
+    <!-- footer start -->
     <footer class="footer">
+
       <div class="footer__inner">
+
+        <!-- footer__menu -->
         <div class="footer__menu">
           <ul class="menu-list">
             <li class="menu-list__link"><a href="#">스토리</a></li>
@@ -876,6 +960,7 @@
           </ul>
         </div>
 
+        <!-- footer__corp -->
         <div class="footer__corp">
           <div class="footer__logo">
             <h4 class="logo-wrap">
@@ -911,5 +996,7 @@
         </div>
       </div>
     </footer>
+    <!-- footer end -->
+
   </body>
 </html>
