--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <div class="card__thumb">
                   <a class="card__link padding" href="#">
                     <div class="card__link__inner">
-                      <img class="card__thumb-img" src="https://storep-phinf.pstatic.net/ogq-59811d7efbda2/stk/cj9fbrgv.png?type=f480_480" alt="사막여우와 왕자의 할로윈 파티" />
+                      <img class="card__thumb-img" src="https://storep-phinf.pstatic.net/ogq-59811d7efbda2/stk/cj9fbrgv.png?type=f480_480" alt="사막여우와 왕자의 할로윈 파티">
                     </div>
                   </a>
                   <div class="card__btn-wrap">
@@ -127,7 +127,7 @@
                   </h3>
                   <div class="card__author-wrap">
                     <a href="#">
-                      <span class="card__author-thumb"><img src="https://storep-phinf.pstatic.net/ogq-577b08b6b6de9/stk/x1u9xo0z.png?type=f480_480" alt="에레" /></span>
+                      <span class="card__author-thumb"><img src="https://storep-phinf.pstatic.net/ogq-577b08b6b6de9/stk/x1u9xo0z.png?type=f480_480" alt="에레"></span>
                       <span class="card__author-name">에레</span>
                     </a>
                   </div>
@@ -141,7 +141,7 @@
                 <div class="card__thumb">
                   <a class="card__link padding" href="#">
                     <div class="card__link__inner">
-                      <img class="card__thumb-img" src="https://storep-phinf.pstatic.net/ogq-577b08b6b6de9/stk/x1u9xo0z.png?type=f480_480" alt="해피 할로윈!"/>
+                      <img class="card__thumb-img" src="https://storep-phinf.pstatic.net/ogq-577b08b6b6de9/stk/x1u9xo0z.png?type=f480_480" alt="해피 할로윈!">
                     </div>
                   </a>
                   <div class="card__btn-wrap">
@@ -152,7 +152,7 @@
                   <h3 class="card__title"><a href="#">해피 할로윈!</a></h3>
                   <div class="card__author-wrap">
                     <a href="#">
-                      <span class="card__author-thumb"><img src="https://s3-ap-northeast-2.amazonaws.com/prod-seoul-market/PROFILE_IMG/055fffb3/57dc73bfff550/OGQ_명양_2018-12-24_f120_120.png"alt="명양" /></span>
+                      <span class="card__author-thumb"><img src="https://s3-ap-northeast-2.amazonaws.com/prod-seoul-market/PROFILE_IMG/055fffb3/57dc73bfff550/OGQ_명양_2018-12-24_f120_120.png"alt="명양"></span>
                       <span class="card__author-name">명양</span>
                     </a>
                   </div>
@@ -166,7 +166,7 @@
                 <div class="card__thumb">
                   <a class="card__link padding" href="#">
                     <div class="card__link__inner">
-                      <img class="card__thumb-img" src="https://storep-phinf.pstatic.net/ogq-578165f072fa0/stk/nqw71lsd.png?type=f480_480" alt="해피 할로윈 친구들"/>
+                      <img class="card__thumb-img" src="https://storep-phinf.pstatic.net/ogq-578165f072fa0/stk/nqw71lsd.png?type=f480_480" alt="해피 할로윈 친구들">
                     </div>
                   </a>
                   <div class="card__btn-wrap">
@@ -179,7 +179,7 @@
                   </h3>
                   <div class="card__author-wrap">
                     <a href="#">
-                      <span class="card__author-thumb"><img src="https://s3-ap-northeast-2.amazonaws.com/prod-seoul-market/PROFILE_IMG/055fffb3/57dc73bfff550/OGQ_명양_2018-12-24_f120_120.png" alt="땅콩C" /></span>
+                      <span class="card__author-thumb"><img src="https://s3-ap-northeast-2.amazonaws.com/prod-seoul-market/PROFILE_IMG/055fffb3/57dc73bfff550/OGQ_명양_2018-12-24_f120_120.png" alt="땅콩C"></span>
                       <span class="card__author-name">땅콩C</span>
                     </a>
                   </div>
@@ -193,12 +193,7 @@
                 <div class="card__thumb">
                   <a class="card__link padding" href="#">
                     <div class="card__link__inner">
-                      <img
-                        class="card__thumb-img"
-                        src="https://storep-phinf.pstatic.net/ogq-578beac32d931/stk/j5use1ag.png?type=f480_480"
-                        alt="모두 다 할로윈!"
-                      /></div
-                  ></a>
+                      <img class="card__thumb-img"src="https://storep-phinf.pstatic.net/ogq-578beac32d931/stk/j5use1ag.png?type=f480_480"alt="모두 다 할로윈!"></div></a>
                   <div class="card__btn-wrap">
                     <button class="card__btn-scrap">찜하기</button>
                   </div>
@@ -210,7 +205,7 @@
                       ><span class="card__author-thumb"
                         ><img
                           src="https://s3-ap-northeast-2.amazonaws.com/prod-seoul-market/PROFILE_IMG/055fffb3/57dc73bfff550/OGQ_명양_2018-12-24_f120_120.png"
-                          alt="초향" /></span
+                          alt="초향" ></span
                       ><span class="card__author-name">초향</span></a
                     >
                   </div>
@@ -228,7 +223,7 @@
                         class="card__thumb-img"
                         src="https://storep-phinf.pstatic.net/ogq-57903fc558f47/stk/poyz74gv.png?type=f480_480"
                         alt="HAPPY HALLOWEEN"
-                      /></div
+                      ></div
                   ></a>
                   <div class="card__btn-wrap">
                     <button class="card__btn-scrap">찜하기</button>
@@ -241,7 +236,7 @@
                       ><span class="card__author-thumb"
                         ><img
                           src="https://s3-ap-northeast-2.amazonaws.com/prod-seoul-market/PROFILE_IMG/055fffb3/57dc73bfff550/OGQ_명양_2018-12-24_f120_120.png"
-                          alt="꾸" /></span
+                          alt="꾸" ></span
                       ><span class="card__author-name">꾸</span></a
                     >
                   </div>
@@ -259,7 +254,7 @@
                         class="card__thumb-img"
                         src="https://storep-phinf.pstatic.net/ogq-5787f2ebca8d5/stk/1bntku6t.png?type=f480_480"
                         alt="민두와 해피 할로윈 파티"
-                      /></div
+                      ></div
                   ></a>
                   <div class="card__btn-wrap">
                     <button class="card__btn-scrap">찜하기</button>
@@ -274,7 +269,7 @@
                       ><span class="card__author-thumb"
                         ><img
                           src="https://s3-ap-northeast-2.amazonaws.com/prod-seoul-market/PROFILE_IMG/055fffb3/57dc73bfff550/OGQ_명양_2018-12-24_f120_120.png"
-                          alt="화유" /></span
+                          alt="화유" ></span
                       ><span class="card__author-name">화유</span></a
                     >
                   </div>
@@ -309,7 +304,7 @@
                         class="card__thumb-img"
                         src="https://storep-phinf.pstatic.net/ogq-59695520597a2/img/qzejrssk.jpg?type=m480_480"
                         alt="할로윈의 정원"
-                      /></div
+                      ></div
                   ></a>
                   <div class="card__btn-wrap">
                     <button class="card__btn-scrap">찜하기</button>
@@ -322,7 +317,7 @@
                       ><span class="card__author-thumb"
                         ><img
                           src="https://s3-ap-northeast-2.amazonaws.com/prod-seoul-market/PROFILE_IMG/055fffb3/57dc73bfff550/OGQ_명양_2018-12-24_f120_120.png"
-                          alt="듕듕" /></span
+                          alt="듕듕" ></span
                       ><span class="card__author-name">듕듕</span></a
                     >
                   </div>
@@ -340,7 +335,7 @@
                         class="card__thumb-img"
                         src="https://storep-phinf.pstatic.net/ogq-5b2b7ea596cc6/img/mnfzzoiq.png?type=m480_480"
                         alt="잭 오 랜턴, 할로윈 호박, 할로윈"
-                      /></div
+                      ></div
                   ></a>
                   <div class="card__btn-wrap">
                     <button class="card__btn-scrap">찜하기</button>
@@ -355,7 +350,7 @@
                       ><span class="card__author-thumb"
                         ><img
                           src="https://storep-phinf.pstatic.net/ogq-5b2b7ea596cc6/img/mnfzzoiq.png?type=m480_480"
-                          alt="pixtastock<" /></span
+                          alt="pixtastock"></span
                       ><span class="card__author-name">pixtastock</span></a
                     >
                   </div>
@@ -373,7 +368,7 @@
                         class="card__thumb-img"
                         src="https://storep-phinf.pstatic.net/ogq-5a2bded1d105f/img/5nixkrm5.png?type=m480_480"
                         alt="꼬마마녀 피오"
-                      /></div
+                      ></div
                   ></a>
                   <div class="card__btn-wrap">
                     <button class="card__btn-scrap">찜하기</button>
@@ -386,7 +381,7 @@
                       ><span class="card__author-thumb"
                         ><img
                           src="https://s3-ap-northeast-2.amazonaws.com/prod-seoul-market/PROFILE_IMG/055fffb3/57dc73bfff550/OGQ_명양_2018-12-24_f120_120.png"
-                          alt="OGQ" /></span
+                          alt="OGQ"></span
                       ><span class="card__author-name">OGQ</span></a
                     >
                   </div>
@@ -404,7 +399,7 @@
                         class="card__thumb-img"
                         src="https://storep-phinf.pstatic.net/ogq-57e0eafbce636/img/kb0t285s.png?type=m480_480"
                         alt="해피 할로윈"
-                      /></div
+                      ></div
                   ></a>
                   <div class="card__btn-wrap">
                     <button class="card__btn-scrap">찜하기</button>
@@ -417,7 +412,7 @@
                       ><span class="card__author-thumb"
                         ><img
                           src="https://storep-phinf.pstatic.net/ogq-57e0eafbce636/img/kb0t285s.png?type=m480_480"
-                          alt="OGQ" /></span
+                          alt="OGQ"></span
                       ><span class="card__author-name">OGQ</span></a
                     >
                   </div>
@@ -435,7 +430,7 @@
                         class="card__thumb-img"
                         src="https://storep-phinf.pstatic.net/ogq-59da74b597d56/img/dk0istof.png?type=m480_480"
                         alt="할로윈프렌즈"
-                      /></div
+                      ></div
                   ></a>
                   <div class="card__btn-wrap">
                     <button class="card__btn-scrap">찜하기</button>
@@ -448,7 +443,7 @@
                       ><span class="card__author-thumb"
                         ><img
                           src="https://s3-ap-northeast-2.amazonaws.com/prod-seoul-market/PROFILE_IMG/055fffb3/57dc73bfff550/OGQ_명양_2018-12-24_f120_120.png"
-                          alt="OGQ" /></span
+                          alt="OGQ" ></span
                       ><span class="card__author-name">OGQ</span></a
                     >
                   </div>
@@ -466,7 +461,7 @@
                         class="card__thumb-img"
                         src="https://storep-phinf.pstatic.net/ogq-5b2a613e29465/img/jcngrgud.png?type=m480_480"
                         alt="[치타부] 귀염뽀짝, 즐거운 할로윈 밤 배경화면"
-                      /></div
+                      ></div
                   ></a>
                   <div class="card__btn-wrap">
                     <button class="card__btn-scrap">찜하기</button>
@@ -481,7 +476,7 @@
                       ><span class="card__author-thumb"
                         ><img
                           src="https://s3-ap-northeast-2.amazonaws.com/prod-seoul-market/PROFILE_IMG/055fffb3/57dc73bfff550/OGQ_명양_2018-12-24_f120_120.png"
-                          alt="마코빌" /></span
+                          alt="마코빌"></span
                       ><span class="card__author-name">마코빌</span></a
                     >
                   </div>
@@ -516,7 +511,7 @@
                         class="card__thumb-img"
                         src="https://storep-phinf.pstatic.net/ogq-5af0cb41bc97d/aud/pta0oaxw.jpg?type=m240_240"
                         alt="MOONLIGHT"
-                      /></div
+                      ></div
                   ></a>
                 </div>
                 <div class="card__info">
@@ -526,7 +521,7 @@
                       ><span class="card__author-thumb"
                         ><img
                           src="https://storep-phinf.pstatic.net/ogq-5af0cb41bc97d/aud/pta0oaxw.jpg?type=m240_240"
-                          alt="FLIO" /></span
+                          alt="FLIO"></span
                       ><span class="card__author-name">FILO</span></a
                     >
                   </div>
