author img change

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <div class="card__link__inner">
                       <img
                         class="card__thumb-img"
-                        src="https://storep-phinf.pstatic.net/ogq-59811d7efbda2/stk/cj9fbrgv.png?type=f480_480.png"
+                        src="https://storep-phinf.pstatic.net/ogq-59811d7efbda2/stk/cj9fbrgv.png?type=f480_480"
                         alt="사막여우와 왕자의 할로윈 파티"
                       />
                     </div>
@@ -125,7 +125,7 @@
                     <a href="#">
                       <span class="card__author-thumb"
                         ><img
-                          src="https://storep-phinf.pstatic.net/ogq-577b08b6b6de9/stk/x1u9xo0z.png?type=f480_480.png"
+                          src="https://s3-ap-northeast-2.amazonaws.com/prod-seoul-market/PROFILE_IMG/055fffb3/57dc73bfff550/OGQ_명양_2018-12-24_f120_120.png"
                           alt="에레"
                       /></span>
                       <span class="card__author-name">에레</span>
@@ -367,7 +367,7 @@
                     <a href="#"
                       ><span class="card__author-thumb"
                         ><img
-                          src="https://storep-phinf.pstatic.net/ogq-5b2b7ea596cc6/img/mnfzzoiq.png?type=m480_480.png"
+                          src="https://s3-ap-northeast-2.amazonaws.com/prod-seoul-market/PROFILE_IMG/055fffb3/57dc73bfff550/OGQ_명양_2018-12-24_f120_120.png"
                           alt="pixtastock" /></span
                       ><span class="card__author-name">pixtastock</span></a
                     >
@@ -429,7 +429,7 @@
                     <a href="#"
                       ><span class="card__author-thumb"
                         ><img
-                          src="https://storep-phinf.pstatic.net/ogq-57e0eafbce636/img/kb0t285s.png?type=m480_480.png"
+                          src="https://s3-ap-northeast-2.amazonaws.com/prod-seoul-market/PROFILE_IMG/055fffb3/57dc73bfff550/OGQ_명양_2018-12-24_f120_120.png"
                           alt="OGQ" /></span
                       ><span class="card__author-name">OGQ</span></a
                     >
@@ -535,7 +535,7 @@
                     <a href="#"
                       ><span class="card__author-thumb"
                         ><img
-                          src="https://storep-phinf.pstatic.net/ogq-5af0cb41bc97d/aud/pta0oaxw.jpg?type=m240_240.png"
+                          src="https://s3-ap-northeast-2.amazonaws.com/prod-seoul-market/PROFILE_IMG/055fffb3/57dc73bfff550/OGQ_명양_2018-12-24_f120_120.png"
                           alt="FLIO" /></span
                       ><span class="card__author-name">FILO</span></a
                     >
@@ -567,7 +567,7 @@
                     <a href="#"
                       ><span class="card__author-thumb"
                         ><img
-                          src="https://storep-phinf.pstatic.net/ogq-5a55aa4c3c308/aud/0lmrjta6.jpg?type=m240_240.png"
+                          src="https://s3-ap-northeast-2.amazonaws.com/prod-seoul-market/PROFILE_IMG/055fffb3/57dc73bfff550/OGQ_명양_2018-12-24_f120_120.png"
                           alt="TIL" /></span
                       ><span class="card__author-name">TIL</span></a
                     >
@@ -601,7 +601,7 @@
                     <a href="#"
                       ><span class="card__author-thumb"
                         ><img
-                          src="https://storep-phinf.pstatic.net/ogq-5a210edef2868/aud/0ybo0amv.jpg?type=m240_240.png"
+                          src="https://s3-ap-northeast-2.amazonaws.com/prod-seoul-market/PROFILE_IMG/055fffb3/57dc73bfff550/OGQ_명양_2018-12-24_f120_120.png"
                           alt="Hitshouse" /></span
                       ><span class="card__author-name">Hitshouse</span></a
                     >
@@ -633,7 +633,7 @@
                     <a href="#"
                       ><span class="card__author-thumb"
                         ><img
-                          src="https://storep-phinf.pstatic.net/ogq-5ab70a6e8f337/aud/xqf2gous.png?type=m240_240.png"
+                          src="https://s3-ap-northeast-2.amazonaws.com/prod-seoul-market/PROFILE_IMG/055fffb3/57dc73bfff550/OGQ_명양_2018-12-24_f120_120.png"
                           alt="파인맨" /></span
                       ><span class="card__author-name">파인맨</span></a
                     >
@@ -697,7 +697,7 @@
                     <a href="#"
                       ><span class="card__author-thumb"
                         ><img
-                          src="https://storep-phinf.pstatic.net/ogq-5a361141f544a/aud/vnwhqg1f.jpg?type=m240_240.png"
+                          src="https://s3-ap-northeast-2.amazonaws.com/prod-seoul-market/PROFILE_IMG/055fffb3/57dc73bfff550/OGQ_명양_2018-12-24_f120_120.png"
                           alt="TIL" /></span
                       ><span class="card__author-name">TIL</span></a
                     >
@@ -748,7 +748,7 @@
                     <a href="#"
                       ><span class="card__author-thumb"
                         ><img
-                          src="https://storep-phinf.pstatic.net/ogq-5b21da21733af/col/bq6kafv8.png?type=m480_480.png"
+                          src="https://s3-ap-northeast-2.amazonaws.com/prod-seoul-market/PROFILE_IMG/055fffb3/57dc73bfff550/OGQ_명양_2018-12-24_f120_120.png"
                           alt="남수" /></span
                       ><span class="card__author-name">남수</span></a
                     >
@@ -779,7 +779,7 @@
                     <a href="#"
                       ><span class="card__author-thumb"
                         ><img
-                          src="https://storep-phinf.pstatic.net/ogq-594a5469a9460/col/jg20z2f9.jpg?type=m480_480.png"
+                          src="https://s3-ap-northeast-2.amazonaws.com/prod-seoul-market/PROFILE_IMG/055fffb3/57dc73bfff550/OGQ_명양_2018-12-24_f120_120.png"
                           alt="하야나라" /></span
                       ><span class="card__author-name">하야나라</span></a
                     >
@@ -812,7 +812,7 @@
                     <a href="#"
                       ><span class="card__author-thumb"
                         ><img
-                          src="https://storep-phinf.pstatic.net/ogq-577da1ec9a6ac/col/ctb2f6zm.jpg?type=m480_480.png"
+                          src="https://s3-ap-northeast-2.amazonaws.com/prod-seoul-market/PROFILE_IMG/055fffb3/57dc73bfff550/OGQ_명양_2018-12-24_f120_120.png"
                           alt="우주동물" /></span
                       ><span class="card__author-name">우주동물</span></a
                     >
@@ -845,7 +845,7 @@
                     <a href="#"
                       ><span class="card__author-thumb"
                         ><img
-                          src="https://storep-phinf.pstatic.net/ogq-574e1b2c5390e/col/bigxhdpc.jpg?type=m480_480.png"
+                          src="https://s3-ap-northeast-2.amazonaws.com/prod-seoul-market/PROFILE_IMG/055fffb3/57dc73bfff550/OGQ_명양_2018-12-24_f120_120.png"
                           alt="박미남853" /></span
                       ><span class="card__author-name">박미남853</span></a
                     >
@@ -876,7 +876,7 @@
                     <a href="#"
                       ><span class="card__author-thumb"
                         ><img
-                          src="https://storep-phinf.pstatic.net/ogq-578eff3d89d85/col/fyojykzk.jpg?type=m480_480.png"
+                          src="https://s3-ap-northeast-2.amazonaws.com/prod-seoul-market/PROFILE_IMG/055fffb3/57dc73bfff550/OGQ_명양_2018-12-24_f120_120.png"
                           alt="미야오타운" /></span
                       ><span class="card__author-name">미야오타운</span></a
                     >
@@ -909,7 +909,7 @@
                     <a href="#"
                       ><span class="card__author-thumb"
                         ><img
-                          src="https://storep-phinf.pstatic.net/ogq-5afce30023170/col/qp7sx8pm.jpg?type=m480_480.png"
+                          src="https://s3-ap-northeast-2.amazonaws.com/prod-seoul-market/PROFILE_IMG/055fffb3/57dc73bfff550/OGQ_명양_2018-12-24_f120_120.png"
                           alt="함박" /></span
                       ><span class="card__author-name">함박</span></a
                     >
