--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <div class="card__link__inner">
                       <img
                         class="card__thumb-img"
-                        src="https://storep-phinf.pstatic.net/ogq-59811d7efbda2/stk/cj9fbrgv.png?type=f480_480"
+                        src="img/artworks-1.png"
                         alt="사막여우와 왕자의 할로윈 파티"
                       />
                     </div>
@@ -124,9 +124,7 @@
                   <div class="card__author-wrap">
                     <a href="#">
                       <span class="card__author-thumb"
-                        ><img
-                          src="https://s3-ap-northeast-2.amazonaws.com/prod-seoul-market/PROFILE_IMG/055fffb3/57dc73bfff550/OGQ_명양_2018-12-24_f120_120.png"
-                          alt="에레"
+                        ><img src="img/artworks-2.png" alt="명양"
                       /></span>
                       <span class="card__author-name">에레</span>
                     </a>
