--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                   <div class="card__author-wrap">
                     <a href="#"
                       ><span class="card__author-thumb"
-                        ><img src="img/images-2.jpeg" alt="듕듕" /></span
+                        ><img src="img/images-2.png" alt="듕듕" /></span
                       ><span class="card__author-name">듕듕</span></a
                     >
                   </div>
@@ -352,7 +352,7 @@
                   <div class="card__author-wrap">
                     <a href="#"
                       ><span class="card__author-thumb"
-                        ><img src="img/images-2.jpeg" alt="pixtastock" /></span
+                        ><img src="img/images-2.png" alt="pixtastock" /></span
                       ><span class="card__author-name">pixtastock</span></a
                     >
                   </div>
@@ -381,7 +381,7 @@
                   <div class="card__author-wrap">
                     <a href="#"
                       ><span class="card__author-thumb"
-                        ><img src="img/images-2.jpeg" alt="OGQ" /></span
+                        ><img src="img/images-2.png" alt="OGQ" /></span
                       ><span class="card__author-name">OGQ</span></a
                     >
                   </div>
@@ -410,7 +410,7 @@
                   <div class="card__author-wrap">
                     <a href="#"
                       ><span class="card__author-thumb"
-                        ><img src="img/images-2.jpeg" alt="OGQ" /></span
+                        ><img src="img/images-2.png" alt="OGQ" /></span
                       ><span class="card__author-name">OGQ</span></a
                     >
                   </div>
@@ -439,7 +439,7 @@
                   <div class="card__author-wrap">
                     <a href="#"
                       ><span class="card__author-thumb"
-                        ><img src="img/images-2.jpeg" alt="OGQ" /></span
+                        ><img src="img/images-2.png" alt="OGQ" /></span
                       ><span class="card__author-name">OGQ</span></a
                     >
                   </div>
@@ -470,7 +470,7 @@
                   <div class="card__author-wrap">
                     <a href="#"
                       ><span class="card__author-thumb"
-                        ><img src="img/images-2.jpeg" alt="마코빌" /></span
+                        ><img src="img/images-2.png" alt="마코빌" /></span
                       ><span class="card__author-name">마코빌</span></a
                     >
                   </div>
@@ -500,7 +500,7 @@
                     ><div class="card__link__inner">
                       <img
                         class="card__thumb-img"
-                        src="img/audio-1.jpeg"
+                        src="img/audio-1.png"
                         alt="MOONLIGHT"
                       /></div
                   ></a>
@@ -510,7 +510,7 @@
                   <div class="card__author-wrap">
                     <a href="#"
                       ><span class="card__author-thumb"
-                        ><img src="img/audio-2.jpeg" alt="FLIO" /></span
+                        ><img src="img/audio-1.png" alt="FLIO" /></span
                       ><span class="card__author-name">FILO</span></a
                     >
                   </div>
@@ -530,7 +530,7 @@
                     ><div class="card__link__inner">
                       <img
                         class="card__thumb-img"
-                        src="img/audio-1.jpeg"
+                        src="img/audio-1.png"
                         alt="Horror 7 'Zombio'"
                       /></div
                   ></a>
@@ -540,7 +540,7 @@
                   <div class="card__author-wrap">
                     <a href="#"
                       ><span class="card__author-thumb"
-                        ><img src="img/audio-2.jpeg" alt="TIL" /></span
+                        ><img src="img/audio-1.png" alt="TIL" /></span
                       ><span class="card__author-name">TIL</span></a
                     >
                   </div>
@@ -560,7 +560,7 @@
                     ><div class="card__link__inner">
                       <img
                         class="card__thumb-img"
-                        src="img/audio-1.jpeg"
+                        src="img/audio-1.png"
                         alt="Horror Gamelan Bells"
                       /></div
                   ></a>
@@ -572,7 +572,7 @@
                   <div class="card__author-wrap">
                     <a href="#"
                       ><span class="card__author-thumb"
-                        ><img src="img/audio-2.jpeg" alt="Hitshouse" /></span
+                        ><img src="img/audio-1.png" alt="Hitshouse" /></span
                       ><span class="card__author-name">Hitshouse</span></a
                     >
                   </div>
@@ -592,7 +592,7 @@
                     ><div class="card__link__inner">
                       <img
                         class="card__thumb-img"
-                        src="img/audio-1.jpeg"
+                        src="img/audio-1.png"
                         alt="The end of horror"
                       /></div
                   ></a>
@@ -602,7 +602,7 @@
                   <div class="card__author-wrap">
                     <a href="#"
                       ><span class="card__author-thumb"
-                        ><img src="img/audio-2.jpeg" alt="파인맨" /></span
+                        ><img src="img/audio-1.png" alt="파인맨" /></span
                       ><span class="card__author-name">파인맨</span></a
                     >
                   </div>
@@ -620,7 +620,7 @@
                     ><div class="card__link__inner">
                       <img
                         class="card__thumb-img"
-                        src="img/audio-1.jpeg"
+                        src="img/audio-1.png"
                         alt="HaWul - Night Walk"
                       /></div
                   ></a>
@@ -632,7 +632,7 @@
                   <div class="card__author-wrap">
                     <a href="#"
                       ><span class="card__author-thumb"
-                        ><img src="img/audio-2.jpeg" alt="HAWUL" /></span
+                        ><img src="img/audio-1.png" alt="HAWUL" /></span
                       ><span class="card__author-name">HAWUL</span></a
                     >
                   </div>
@@ -652,7 +652,7 @@
                     ><div class="card__link__inner">
                       <img
                         class="card__thumb-img"
-                        src="img/audio-1.jpeg"
+                        src="img/audio-1.png"
                         alt="장엄서곡"
                       /></div
                   ></a>
@@ -662,7 +662,7 @@
                   <div class="card__author-wrap">
                     <a href="#"
                       ><span class="card__author-thumb"
-                        ><img src="img/audio-2.jpeg" alt="TIL" /></span
+                        ><img src="img/audio-1.png" alt="TIL" /></span
                       ><span class="card__author-name">TIL</span></a
                     >
                   </div>
@@ -711,7 +711,7 @@
                   <div class="card__author-wrap">
                     <a href="#"
                       ><span class="card__author-thumb"
-                        ><img src="img/coloring-2.jpeg" alt="남수" /></span
+                        ><img src="img/coloring-2.png" alt="남수" /></span
                       ><span class="card__author-name">남수</span></a
                     >
                   </div>
@@ -740,7 +740,7 @@
                   <div class="card__author-wrap">
                     <a href="#"
                       ><span class="card__author-thumb"
-                        ><img src="img/coloring-2.jpeg" alt="하야나라" /></span
+                        ><img src="img/coloring-2.png" alt="하야나라" /></span
                       ><span class="card__author-name">하야나라</span></a
                     >
                   </div>
@@ -771,7 +771,7 @@
                   <div class="card__author-wrap">
                     <a href="#"
                       ><span class="card__author-thumb"
-                        ><img src="img/coloring-2.jpeg" alt="우주동물" /></span
+                        ><img src="img/coloring-2.png" alt="우주동물" /></span
                       ><span class="card__author-name">우주동물</span></a
                     >
                   </div>
@@ -802,7 +802,7 @@
                   <div class="card__author-wrap">
                     <a href="#"
                       ><span class="card__author-thumb"
-                        ><img src="img/coloring-2.jpeg" alt="박미남853" /></span
+                        ><img src="img/coloring-2.png" alt="박미남853" /></span
                       ><span class="card__author-name">박미남853</span></a
                     >
                   </div>
@@ -831,9 +831,7 @@
                   <div class="card__author-wrap">
                     <a href="#"
                       ><span class="card__author-thumb"
-                        ><img
-                          src="img/coloring-2.jpeg"
-                          alt="미야오타운" /></span
+                        ><img src="img/coloring-2.png" alt="미야오타운" /></span
                       ><span class="card__author-name">미야오타운</span></a
                     >
                   </div>
@@ -864,7 +862,7 @@
                   <div class="card__author-wrap">
                     <a href="#"
                       ><span class="card__author-thumb"
-                        ><img src="img/coloring-2.jpeg" alt="함박" /></span
+                        ><img src="img/coloring-2.png" alt="함박" /></span
                       ><span class="card__author-name">함박</span></a
                     >
                   </div>
